dashboard setup done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -350,7 +350,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  background: linear-gradient(90deg, #27a5f6 0.32%, #e8eaff 93.68%);
+  background: linear-gradient(90deg, #028ee6 0.32%, #d02be6 93.68%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
